--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,11 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-  "start": "react-scripts start --port 3001",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
-
+    "start": "react-scripts start --port 3001",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -26,5 +25,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
